@@ -1,7 +1,7 @@
 compiling with configure/make
 ---------------------------------
 you need
--the latest version of libtheora ( http://www.theora.org/files )
+- the latest version of libtheora ( http://www.theora.org/files )
 - ffmpeg 0.4.9-pre1 or cvs ( http://ffmpeg.sf.net ) / by running ./get_ffmpeg_cvs.sh
   configure it with i.e.
   ./configure --enable-faad --enable-vorbis --disable-mp3lame --enable-pp --enable-a52  --enable-pthreads --disable-vhook --disable-v4l --disable-audio-oss --disable-dv1394  --disable-ffmpeg --disable-ffserver --disable-network --enable-gpl
